# agent_email

./: .gitignore  AGENTS.md  README.md  api.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_email/: __init__.py  contracts.py  runner.py
src/agent_email.egg-info/: PKG-INFO  SOURCES.txt
src/agent_email/adapters/: __init__.py  sqlite_parity.py
tests/: test_contracts.py  test_runner.py  test_sqlite_parity_adapter.py
